# grimoirelab-perceval-finos

./: .travis.yml  AUTHORS  NEWS  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
perceval/backends/finos/: finosmeetings.py
tests/: base.py  run_tests.py  test_finosmeetings.py
tests/data/finosmeetings/: finosmeetings_entries.csv
