[tool.poetry]
name = "perceval-finos"
version = "0.1.10"
description = "Bundle of Perceval backends for FINOS ecosystem."
authors = [
    "Bitergia Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/Bitergia/grimoirelab-perceval-finos"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "perceval" },
    { include = "tests", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Bitergia/grimoirelab-perceval-finos/issues"

[tool.poetry.dependencies]
python = "^3.6.1"

requests = "^2.7.0"
grimoirelab-toolkit = "^0.2"
perceval = "^0.17.4"

[tool.poetry.dev-dependencies]
httpretty = "1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
